<resources>
    <string name="app_name">Stocks IQ</string>
    <string name="app_name_stock">Stocks</string>
    <string name="app_name_tracker">IQ</string>
    <string name="admob_ad_unit_id">a151a2c1d318ecd</string>
    <string name="admob_test_device_id">D69E93739274DCE3D5C18CBBB0C6B276</string>
    <string name="all_portfolios">ALL PORTFOLIOS</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="indicator_overview">STOCKS</string>
    <string name="indicator_positions">POSITIONS</string>
    <string name="indicator_perf">PERFORMANCE</string>
    <string name="indicator_distribution">DISTRIBUTION</string>
    <string name="indicator_portfolios">PORTFOLIOS</string>
    <string name="indicator_news">NEWS</string>
    <string name="indicator_alert_list">ALERTS</string>
    <string name="initial_cash_deposit">Cash Deposit</string>
    <string name="nav_drawer_item1">Stocks</string>
    <string name="nav_drawer_item2">News</string>
    <string name="nav_drawer_item3">Positions</string>
    <string name="nav_drawer_item4">Alerts</string>
    <string name="nav_drawer_item5">Performance</string>
    <string name="nav_drawer_item6">Distribution</string>
    <string name="nav_drawer_item7">Settings</string>
    <string name="default_watchlist_title">MY WATCHLIST</string>
    <string name="default_port_title">MY PORTFOLIO</string>
    <string name="add_new_item_3">Stock Transaction</string>
    <string name="add_new_item_4">Cash Transaction</string>
    <string name="search_symbol_hint_text">Find stock by symbol or company name</string>
    <string name="cash_positions">CASH POSITIONS</string>
    <string name="enter_cash_amount">Enter Cash Amount</string>
    <string name="enter_date_of_txn">Enter Date of Transaction</string>
    <string name="stock_pos_first_column">SYMBOL /\nCompany Name</string>
    <string name="stock_pos_second_column">QUANTITY x\nAvg Price</string>
    <string name="stock_pos_third_column">LAST PRICE\nChange (%)</string>
    <string name="stock_pos_fourth_column_closed">Gain/Loss</string>
    <string name="stock_pos_fourth_column">MKT VALUE\nGain/Loss</string>
    <string name="cash_pos_first_column">INITIAL\nBALANCE</string>
    <string name="cash_pos_second_column">TOTAL\nDEPOSITS</string>
    <string name="cash_pos_third_column">TOTAL\nWITHDRAWALS</string>
    <string name="cash_pos_fourth_column">FINAL\nBALANCE</string>
    <string name="switch_on">WITHDRAW</string>
    <string name="switch_off">DEPOSIT</string>
    <string name="stock_positions">STOCK POSITIONS</string>
    <string name="long_positions_overall">LONG POSITIONS OVERALL</string>
    <string name="short_positions_overall">SHORT POSITIONS OVERALL</string>
    <string name="closed_positions_overall">CLOSED POSITIONS OVERALL</string>
    <string name="long_positions_daily">LONG POSITIONS DAILY</string>
    <string name="short_positions_daily">SHORT POSITIONS DAILY</string>
    <string name="closed_positions_daily">CLOSED POSITIONS DAILY</string>
    <string name="string_long">LONG</string>
    <string name="string_short">SHORT</string>
    <string name="string_closed">CLOSED</string>
    <string name="overall_positions">OVERALL POSITIONS</string>
    <string name="daily_positions">DAILY POSITIONS</string>
    <string name="overall_gain_loss">Overall Gain/Loss (%)</string>
    <string name="daily_gain_loss">Daily Gain/Loss (%)</string>
    <string name="txn_activity_title">TRANSACTIONS IN:</string>
    <string name="txn_port_first_column">DATE\n(MM/DD/YY)</string>
    <string name="txn_port_second_column">@string/ticker_symbol</string>
    <string name="txn_port_third_column">QUANTITY\nPRICE</string>
    <string name="txn_port_fourth_column">CASH VALUE\n(Running Balance)</string>
    <string name="no_txns_added">No transactions added.</string>
    <string name="delete_txn">Delete Transaction</string>
    <string name="delete_txn_msg">This transaction will be deleted. Confirm?</string>
    <string name="txn_deleted">Transaction deleted.</string>
    <string name="view_edit_details">View/Edit\nDetails</string>
    <string name="no_txns_text">No transaction data found in selected Portfolio(s)!</string>
    <string name="add_new_txn">Add New Transaction</string>
    <string name="add_new_txn_item_1">Trade</string>
    <string name="add_new_txn_item_2">Cash</string>
    <string name="cash">Cash</string>
    <string name="trades">Trades</string>
    <string name="all">All</string>
    <string name="keywords">Keywords</string>
    <string name="realized_gain_loss">Realized Gain/Loss</string>
    <string name="unrealized_gain_loss">Unrealized Gain/Loss</string>
    <string name="return_on_investment">Return on Investment</string>
    <string name="name">Name</string>
    <string name="net_gain_loss">NET GAIN/LOSS</string>
    <string name="number_of_trades">NUMBER OF TRADES</string>
    <string name="number_of_shares">NUMBER OF SHARES</string>
    <string name="total_value">TOTAL VALUE</string>
    <string name="realized_gain_loss_title">Realized Gains</string>
    <string name="unrealized_gain_loss_title">Unrealized Gains</string>
    <string name="radio_button_stocks">STOCKS</string>
    <string name="net_cash">Net Cash</string>
    <string name="net_asset">Net Asset</string>
    <string name="distribution_chart_title">DISTRIBUTION CHART</string>
    <string name="dist_card_column_1">COMPONENT</string>
    <string name="dist_card_column_2">PERCENT (%)</string>
    <string name="dist_card_column_3">VALUE</string>
    <string name="include_cash">Include Cash</string>
    <string name="change_color">Change\nColor</string>
    <string name="price_alerts">PRICE ALERTS</string>
    <string name="news_alerts">NEWS ALERTS</string>
    <string name="price_alerts_second_col">UPPER\nLIMIT</string>
    <string name="price_alerts_third_col">LOWER\nLIMIT</string>
    <string name="news_alerts_second_col">ALERT\nFREQUENCY</string>
    <string name="news_alerts_third_col">ENABLED /\nDISABLED</string>
    <string name="start_time">Start Time:</string>
    <string name="alert_frequency">Alert Frequency:</string>
    <string name="empty_stock_code_error">Stock Code must not be empty</string>
    <string name="empty_start_time_error">Start Time must not be empty</string>
    <string name="no_stocks_text">No stock data found in selected Portfolio(s)!</string>
    <string name="all_stocks">ALL STOCKS</string>
    <string name="latest_news">Latest News</string>
    <string name="video">video</string>
    <string name="sp_refresh_frequency_1">1 minute</string>
    <string name="sp_refresh_frequency_2">5 minutes</string>
    <string name="sp_refresh_frequency_3">10 minutes</string>
    <string name="sp_refresh_frequency_4">15 minutes</string>
    <string name="sp_refresh_frequency_5">30 minutes</string>
    <string name="sp_refresh_frequency_6">1 hour</string>
    <string name="sp_refresh_frequency_7">3 hours</string>
    <string name="sp_refresh_frequency_8">6 hours</string>
    <string name="sp_refresh_frequency_9">12 hours</string>
    <string name="sp_refresh_frequency_10">24 hours</string>
    <string name="set_alerts_window">Set Notification Window</string>
    <string name="alerts_window">Notification Window</string>
    <string name="alerts_window_summary">Notifications will only be sent within this window</string>
    <string name="default_alerts_window">8:00 AM - 8:00 PM</string>
    <string name="set_start_time">Set Start Time</string>
    <string name="set_end_time">Set End Time</string>
    <string name="alerts_window_error_msg">Start time must be before end time.</string>
    <string name="end_time">End Time: </string>
    <string name="set_theme">Set Theme</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="ticker_symbol">TICKER\nSYMBOL</string>
    <string name="fees_commissions">Fees/Commissions</string>
    <string name="date_title">Date</string>
    <string name="price_title">Price</string>
    <string name="notes_trade">Notes</string>
    <string name="portfolio_type_title">Portfolio</string>
    <string name="type_trade">Transaction Type</string>
    <string name="volume_trade">Volume</string>
    <string name="total_trade">Total (including fees)</string>
    <string name="add_price_alert_title">SET PRICE ALERT</string>
    <string name="add_news_alert_title">SET NEWS ALERT</string>
    <string name="upper_target_title">Upper Target</string>
    <string name="lower_target_title">Lower Target</string>
    <string name="current_price_title">Current Price</string>
    <string name="news_alert_frequency_1">Daily</string>
    <string name="news_alert_frequency_2">12 hourly</string>
    <string name="news_alert_frequency_3">6 hourly</string>
    <string name="news_alert_frequency_4">3 hourly</string>
    <string name="news_alert_frequency_5">Hourly</string>
    <string name="news_alert_frequency_6">30 minutes</string>
    <string name="news_alert_frequency_7">15 minutes</string>
    <string name="import_button">IMPORT</string>
    <string name="import_csv_title">Import .CSV</string>
    <string name="select_csv_file">Select CSV File</string>
    <string name="csv_filename">File: (sdcard/StocksIQ/google_finance/)</string>
    <string name="import_into_portfolio">Import into Portfolio</string>
    <string name="select_portfolio">Select Portfolio</string>
    <string name="error_reading_amount_field">Error reading AMOUNT field</string>
    <string name="error_num_shares_zero">Number of shares must be more than zero</string>
    <string name="error_price_zero">Price cannot be zero</string>
    <string name="unknown_error">Unknown error</string>
    <string name="while_parsing_line">while parsing LINE</string>
    <string name="google_finance_txns">Google Finance Transactions</string>
    <string name="import_results">Import Results</string>
    <string name="successful_records">Records inserted successfully:</string>
    <string name="error_at_line">Error at LINE</string>
    <string name="stocks_activity_title">STOCK:</string>
    <string name="add_new_item_5">Price Alert</string>
    <string name="add_new_item_6">News Alert</string>
    <string name="add_new_item_7">Add [%s] to Watchlist</string>
    <string name="chart_title">24H CHART</string>
    <string name="other_statistics">OTHER STATISTICS</string>
    <string name="txt_statistics">KEY STATISTICS</string>
    <string name="net_position_title">NET POSITION</string>
    <string name="net_value_title">NET VALUE</string>
    <string name="average_price_title">AVG PRICE</string>
    <string name="no_txns_for_stock_text">No transaction data found for selected Stock!</string>
    <string name="about_app">About App</string>
    <string name="default_starting_page">Default Starting Page</string>
    <string name="overview_sp">Stocks</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="auto_add_to_news_alert">Auto Add News Alert</string>
    <string name="auto_add_summary">Auto add news alert when stock is added to portfolio or watchlist</string>
    <string name="refresh_frequency">Refresh Frequency</string>
    <string name="more">More</string>
    <string name="app_version_number">Version 1.0</string>
    <string name="other_applications">Other Applications</string>
    <string name="other_applications_summary">Check out our other applications</string>
    <string name="tell_a_friend">Tell A Friend</string>
    <string name="tell_a_friend_summary">Share about Stocks IQ</string>
    <string name="app_rater_rate">Rate %s</string>
    <string name="app_rater_if_enjoy">If you enjoy using %s,  please support our app by giving us a 5-star rating in the Android Market.\n
Thank you!</string>
    <string name="app_rater_reminder_later">Remind me later</string>
    <string name="app_rater_no">No, Thanks</string>
</resources>