<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp" 
        android:background="@color/transparent"/>
    
    <TextView
        android:id="@+id/card_cash_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="left"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:maxLines="1"
        android:text="@string/cash_positions" />

    <LinearLayout
        android:id="@+id/card_first_row_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="horizontal">
        
	    <TextView
	        android:id="@+id/first_column_title"
	        style="@style/stock_positions_card_header_tv_style"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/cash_pos_first_column" />
	    
	    <TextView
	        android:id="@+id/second_column_title"
	        style="@style/stock_positions_card_header_tv_style"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/cash_pos_second_column"/>
	    
	    <TextView
	        android:id="@+id/third_column_title"
	        style="@style/stock_positions_card_header_tv_style"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/cash_pos_third_column" />
	
	    <TextView
	        android:id="@+id/fourth_column_title"
	        style="@style/stock_positions_card_header_tv_style"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/cash_pos_fourth_column"/>
	    
	</LinearLayout>


</LinearLayout>